--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
 	color: rgb(73, 73, 73);
 	padding: 0;
 	font-family: "Montserrat", sans-serif;
+	overflow-x: hidden;
 }
 
 h1,
@@ -26,6 +27,7 @@ h2 {
 }
 
 h1 {
+
 	margin: 0 0 0.3em 0;
 	font-size: 3.8em;
 }
@@ -216,7 +218,130 @@ footer ul li a {
 
 /* ********Responsiveness ******* */
 
-@media screen and (max-width:870px ){
-	body { background-color: red;};
+@media (min-width:300px) and (max-width:870px ){
+	
+h1 {
+
+		margin: 0 0 .8em 0;
+		font-size: 2.8em;
+	}
+h2 {
+	margin: 0 0 0.5em 0;
+	font-size: 1.8em;
+	margin-bottom: 0.5em;
+	text-align: center;
+}
+
+header {
+	background-color: #2f3061;
+	color: #fff;
+	text-align: center;
+	padding-top: 3.3em;
 
 }
+
+
+header .content-wapper{
+	padding: 20px;
+	justify-content: center;
+}
+
+.portfolio-item {
+	display: grid;
+	grid-template-columns: 1fr;	
+	justify-items:center;
+	/* background-color: rgb(159, 188, 226); */
+	text-align: center;
+	width:100%
+	
+}
+
+.portfolio-item img { 
+	width:80%;
+	overflow: hidden;
+    margin-bottom: 30px;
+}
+.portfolio-item .project-detail {
+	width: 75%;
+	text-align: left;
+}
+
+
+section.work-experience .job-item {
+	display: grid;
+	grid-template-columns: 1fr;
+	column-gap: 30px;
+	padding-left: 20px;
+}
+.job-summary{margin-top: 20px;}
+
+section.education,
+section.skill {
+	padding-left: 20px;
+}
+}
+
+@media (min-width:110px) and  (max-width:399px) {
+
+	body {background-color:red;}
+	h1 {
+
+		margin: 0 0 .8em 0;
+		font-size:1.8em;
+	}
+ 
+	p{ width:40%}
+
+	h2 {
+		margin: 0 0 0.5em 0;
+		font-size: 1.8em;
+		margin-bottom: 0.5em;
+	
+	}
+
+	header {
+		background-color: #2f3061;
+		color: #fff;
+		text-align: center;
+		/* padding-top: 3.3em; */
+
+	}
+
+	header .content-wapper {
+		padding: 20px;
+		justify-content: center;
+	}
+
+	.portfolio-item {
+		display: grid;
+		grid-template-columns: 1fr;
+		justify-items: center;
+		/* background-color: rgb(159, 188, 226); */
+		text-align: center;
+		width: 100%
+	}
+
+	.portfolio-item img {
+		width: 80%;
+		overflow: hidden;
+		margin-bottom: 30px;
+	}
+
+	.portfolio-item .project-detail {
+		width: 75%;
+		text-align: left;
+	}
+
+	section.work-experience .job-item {
+		display: grid;
+		grid-template-columns: 1fr;
+		column-gap: 30px;
+	}
+
+	.job-summary {
+		margin-top: 20px;
+	} 
+}
+
+
+	
