--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Caveat:700|Montserrat:400,700&display=swap");
 
 /* ***********************  GLOBAL ***********************  */
-
-html {
-	box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-	box-sizing: inherit;
-}
-
 body {
-	margin: 0;
-	padding: 0;
-	color: rgb(73, 73, 73);
+	margin: 0 auto;
 	padding: 0;
 	font-family: "Montserrat", sans-serif;
-	overflow-x: hidden;
+	font-size: 16px;
 }
 
 h1,
@@ -27,7 +14,6 @@ h2 {
 }
 
 h1 {
-
 	margin: 0 0 0.3em 0;
 	font-size: 3.8em;
 }
@@ -46,6 +32,7 @@ h3 {
 p {
 	margin: 0 0 0.1em 0;
 	line-height: 1.5em;
+	
 }
 
 img {
@@ -70,8 +57,10 @@ section aside:last-of-type {
 	border-bottom: none;
 }
 
+
 /* **********  HEADER ***********  */
 header {
+	
 	background-color: #2f3061;
 	color: #fff;
 	text-align: center;
@@ -222,12 +211,12 @@ footer ul li a {
 	
 h1 {
 
-		margin: 0 0 .8em 0;
+		margin: 0 0 1.8em 0;
 		font-size: 2.8em;
 	}
 h2 {
 	margin: 0 0 0.5em 0;
-	font-size: 1.8em;
+	font-size: 2.0em;
 	margin-bottom: 0.5em;
 	text-align: center;
 }
@@ -239,7 +228,8 @@ header {
 	padding-top: 3.3em;
 
 }
-
+p {font-size: 1em;
+  font-weight: 400;}
 
 header .content-wapper{
 	padding: 20px;
@@ -283,15 +273,13 @@ section.skill {
 
 @media (min-width:110px) and  (max-width:399px) {
 
-	body {background-color:red;}
+
 	h1 {
 
 		margin: 0 0 .8em 0;
 		font-size:1.8em;
 	}
  
-	p{ width:40%}
-
 	h2 {
 		margin: 0 0 0.5em 0;
 		font-size: 1.8em;
@@ -341,7 +329,13 @@ section.skill {
 	.job-summary {
 		margin-top: 20px;
 	} 
-}
+	p {
+		margin: 0 0 0.1em 0;
+		font-size: 18px;
+		line-height: 1.5em;
+
+	}
+} 
 
 
 	
