--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,6 @@ h1 {
 h2 {
 	margin: 0 0 0.5em 0;
 	font-size: 2.0em;
-	margin-bottom: 0.5em;
 	text-align: center;
 }
 
@@ -240,7 +239,6 @@ header .content-wapper{
 	display: grid;
 	grid-template-columns: 1fr;	
 	justify-items:center;
-	/* background-color: rgb(159, 188, 226); */
 	text-align: center;
 	width:100%
 	
@@ -269,72 +267,28 @@ section.education,
 section.skill {
 	padding-left: 20px;
 }
+footer ul li {
+	display: block;
+	margin: 10px auto;
 }
 
-@media (min-width:110px) and  (max-width:399px) {
+}
+
+@media (min-width:110px) and (max-width:399px) {
 
 
-	h1 {
-
-		margin: 0 0 .8em 0;
-		font-size:1.8em;
-	}
- 
-	h2 {
-		margin: 0 0 0.5em 0;
-		font-size: 1.8em;
-		margin-bottom: 0.5em;
-	
-	}
-
-	header {
-		background-color: #2f3061;
-		color: #fff;
-		text-align: center;
-		/* padding-top: 3.3em; */
-
-	}
-
-	header .content-wapper {
-		padding: 20px;
+h1 {font-size: 2.5em;margin: 0 0 .8em 0;} 
+h2 {margin: 0 0 0.5em 0;font-size: 1.8em;}
+header {width: 100%; text-align: center;}	
+header p,
+.selected-project{display: none}
+.content-wapper {
+		width:100vw;
 		justify-content: center;
+		overflow-x: hidden;
 	}
-
-	.portfolio-item {
-		display: grid;
-		grid-template-columns: 1fr;
-		justify-items: center;
-		/* background-color: rgb(159, 188, 226); */
-		text-align: center;
-		width: 100%
-	}
-
-	.portfolio-item img {
-		width: 80%;
-		overflow: hidden;
-		margin-bottom: 30px;
-	}
-
-	.portfolio-item .project-detail {
-		width: 75%;
-		text-align: left;
-	}
-
-	section.work-experience .job-item {
-		display: grid;
-		grid-template-columns: 1fr;
-		column-gap: 30px;
-	}
-
-	.job-summary {
-		margin-top: 20px;
-	} 
-	p {
-		margin: 0 0 0.1em 0;
-		font-size: 18px;
-		line-height: 1.5em;
-
-	}
+footer ul li {display: block;}
+		
 } 
 
 
