--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ footer ul li a {
 
 /* ********Responsiveness ******* */
 
-@media (min-width:300px) and (max-width:870px ){
+@media screen and (max-width:870px ){
 	
 h1 {
 
@@ -274,15 +274,15 @@ footer ul li {
 
 }
 
-@media (min-width:110px) and (max-width:399px) {
+@media screen and (max-width:399px) {
 
 
-h1 {font-size: 2.5em;margin: 0 0 .8em 0;} 
-h2 {margin: 0 0 0.5em 0;font-size: 1.8em;}
-header {width: 100%; text-align: center;}	
-header p,
-.selected-project{display: none}
-.content-wapper {
+	h1 {font-size: 2.5em;margin: 0 0 .8em 0;} 
+	h2 {margin: 0 0 0.5em 0;font-size: 1.8em;}
+	header {width: 100%; text-align: center;}	
+	header p,
+	.selected-project{display: none}
+	.content-wapper {
 		width:100vw;
 		justify-content: center;
 		overflow-x: hidden;
