--- a/css/style.css
+++ b/css/style.css
@@ -267,8 +267,8 @@ header .content-wapper{
 section.work-experience .job-item {
 	display: grid;
 	grid-template-columns: 1fr;
-	column-gap: 30px;
-	padding-left: 20px;
+	/* column-gap: 30px; */
+	padding-left: 10px;
 }
 .job-summary{margin-top: 20px;}
 
