--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,9 @@ section.education,
 section.skill {
 	padding-left: 20px;
 }
+section.education p {
+	width: 100%;
+}
 footer ul li {
 	display: block;
 	margin: 10px auto;
